--- a/build-a-video-compilation-page.html
+++ b/build-a-video-compilation-page.html
@@ -22,18 +22,16 @@
 			></iframe>
 		</section>
     
-    <section>
-        <h2>Dheera Dheera Full Video Song </h2>
-        <p>Watch Dheera Dheera Full Video Song from KGF Chapter 1 Telugu Movie, starring Yash, Srinidhi Shetty.
-
-Subscribe to our Youtube Channel </p>
-        <iframe 
-        title = "Dheera Dheera Song"
-        src ="https://www.youtube.com/embed/watch?v=x4NG2X8zhSU&list=PLlD5mQq-IQhf8pPef3IEeQJL3Pntw4K10"
-        height = 600
-        width = 600
-        ></iframe>
-    </section>
+		<section>
+			<h2>Dheera Dheera Full Video Song </h2>
+			<p>Watch Dheera Dheera Full Video Song from KGF Chapter 1 Telugu Movie, starring Yash, Srinidhi Shetty.Subscribe to our Youtube Channel </p>
+			<iframe 
+			title = "Dheera Dheera Song"
+			src ="https://www.youtube.com/embed/watch?v=x4NG2X8zhSU&list=PLlD5mQq-IQhf8pPef3IEeQJL3Pntw4K10"
+			height = 600
+			width = 600
+			></iframe>
+		</section>
     
 		<section>
 			<h2>Ulakane Ulakadu - Video Song </h2>
